# DeepMD

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  cli.py  config.py  policy.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/alanine/: config.json  generate_alanine.py  run_benchmark.py
benchmarks/alanine_mdtest/: config.yml
core/: engine.py  integrators.py  params.py
docs/: REPRODUCIBILITY.md  architecture.md  benchmarks.md  config.md  gamd.md  gnn.md  gnn_pipeline.md
io/: report.py  restart.py
learn/: data.py  model.py
scripts/: check_ml_calibration.py  gamd_smoke_test.py  generate_readme.py  gnn_example.py  gnn_pipeline.py  gnn_visualize.py  make_ablation_configs.py  plot_ablation_comparison.py  plot_controller_diagnostics.py  plot_ml_calibration_diagnostics.py  plot_reweighting_diagnostics.py  tune_controller_weights.py
src/paddle/: cli.py  config.py  policy.py
src/paddle/bench/: __init__.py  alanine_system.py  mdtest.py
src/paddle/core/: engine.py  integrators.py  params.py
src/paddle/io/: restart.py
stages/: equil_prod.py
tests/: test_alanine_generator.py  test_benchmark_smoke.py  test_config_safety_mode.py  test_end_to_end_smoke.py  test_engine_platform.py  test_equil_policy_integration.py  test_equil_prod_nan_detection.py  test_gpu_md_alanine.py  test_gpu_md_smoke.py  test_imports.py  test_latent_pca_inputs.py  test_make_configs_gamd.py  test_metrics.py  test_policy.py  test_real_md_pipeline.py  test_restart_roundtrip.py  test_restart_validation.py
validate/: metrics.py  pmf.py
(+8 files in other folders)
